kubernetes/umbraco-cms/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umbraco-cms
  namespace: legacy-modernization
  labels:
    app: umbraco-cms
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: umbraco-cms
